Convert TestTypeSignature to streams